# textnormalization

./: README.md  setup.cfg
src/textnorm_en/: __init__.py  abbreviation_converter.py  date_converter.py  normalizer.py  number_converter.py  time_converter.py  unit_converter.py
tests/: test_normalizer.py
