[metadata]
name = textnorm_en
version = 0.0.4
author = Sudheer Kolachina	
author_email = sudheer.kpg08@gmail.com
description = A package for English text normalization 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/textnorm_en
project_urls =
    Bug Tracker = https://github.com/pypa/textnorm_en/issues
install_requires =
    num2words
    spacy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[aliases]
test=pytest
